add header and home page style

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,2 +1,17 @@
-<h1>{{test}}</h1>
-<h1>{{thisTest}}</h1>
+<div class="mainPageDivs" id="aboutMainPageDiv">
+
+  <div class="aboutPageContentDivs" id="aboutPageStoreInfoDiv">
+    <div class="aboutPageContentDivTextContainers" id="aboutPageStoreInfoContentTextContainer">
+
+      <h2>Kauffman's Heritage Woodcraft</h2>
+      <p>Family owned custom furniture created using reclaimed barnwood located in Fountain City, Indiana</p>
+      <p>We have a large selection of unique, high quality furniture and offer custom orders</p>
+      <p>Enjoy the rustic feel without the rustic quality!</p>
+    </div>
+    <div class="aboutPageContentLinkContainers">
+
+      <a href="#" name="button">Visit Shop</a>
+
+    </div>
+  </div>
+</div>
