--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -24,7 +24,7 @@
     <div class="aboutPageContentDivTextContainers" id="aboutPageCustFurnTextContainer">
       <h2>Customize Your Furniture!</h2>
       <p>Every piece of furniture is uniquely created, why not have one uniquely created for you?</p>
-      <p>If you can dream a set, you can have the set! If you need some inspiration, check out the dreams we made come true!</p>
+      <p>We can turn a family memory into a member of the family!</p>
 
     </div>
 
