add backend connection to admin and shop, made shop work and filter, big brain thyme

--- a/public/partials/store.html
+++ b/public/partials/store.html
@@ -2,22 +2,22 @@
 
   <div class="" id="storeCategoryDisplay">
 
-    <div class="categoryCells" ng-click="filterBy('all','cat')">
+    <div class="categoryCells" ng-click="filterBy('all','room')">
       <h2>All Items</h2>
     </div>
-    <div class="categoryCells" ng-click="filterBy('living','cat')">
+    <div class="categoryCells" ng-click="filterBy('Living','room')">
       <h2>Living</h2>
     </div>
-    <div class="categoryCells" ng-click="filterBy('bedroom','cat')">
+    <div class="categoryCells" ng-click="filterBy('Bedroom','room')">
       <h2>Bedroom</h2>
     </div>
-    <div class="categoryCells" ng-click="filterBy('dining','cat')">
+    <div class="categoryCells" ng-click="filterBy('Dining','room')">
       <h2>Dining</h2>
     </div>
-    <div class="categoryCells" ng-click="filterBy('kitchen','cat')">
+    <div class="categoryCells" ng-click="filterBy('Kitchen','room')">
       <h2>Kitchen</h2>
     </div>
-    <div class="categoryCells" ng-click="filterBy('outdoor','cat')">
+    <div class="categoryCells" ng-click="filterBy('Outdoor','room')">
       <h2>Outdoor</h2>
     </div>
 
